test/functions/deitz/test_write_type_error.good
test_write_type_error.chpl:2: error: unresolved call 'writeln(type int)'
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note: candidates are: Writer.writeln(args ...?n)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 Writer.writeln()
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 writeln(args ...?n)
$CHPL_HOME/modules/internal/ChapelIO.chpl:: note:                 writeln()
